# rss-parser

./: pyproject.toml  sqlite.db
src/rss-parser/: main.py
